<resources>
    <string name="app_name">Schero</string>
    <string name="home">Home</string>
    <string name="recommender">Recommender</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="profile">Profile</string>
    <string name="logout">Log out</string>
    <string name="theme">Change Theme</string>
    <string name="search">Search</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="recommendation">Recommendasi</string>
    <string name="name">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="title_menu_1">Your Scholarship Compass</string>
    <string name="title_menu_2">Navigating Your Educational Odyssey</string>
    <string name="title_menu_3">Where Opportunities Find You</string>
    <string name="title_menu_4">Connect to Your Academic Future</string>
    <string name="desc_menu_1">Schero is not just an app, it is your personal guide to unlocking a world of educational opportunities. Discover tailored scholarships, track your academic journey, and embark on a quest towards a brighter future!</string>
    <string name="desc_menu_2">Embark on a seamless educational odyssey with Schero! This app sifts through myriad scholarships, offering personalized recommendations. Your journey to academic excellence begins with a single tap.</string>
    <string name="desc_menu_3">Schero is not just an app; it is your beacon to academic success. Uncover scholarships that match your aspirations, track your progress, and let opportunities find you effortlessly.</string>
    <string name="desc_menu_4">With Schero, your academic future is just a click away. Connect to a world of scholarships tailor-made for you. Experience the seamless link between your ambitions and the opportunities that await!</string>
    <string name="signin">Continue With Google</string>
    <string name="link_pendaftaran">Link Pendaftaran</string>
    <string name="negara">Negara</string>
    <string name="inpex">INPEX Scholarship</string>
    <string name="jepang">Jepang</string>
    <string name="jenjang">Jenjang</string>
    <string name="s1">S1</string>
    <string name="minimal_ipk">Minimal IPK</string>
    <string name="ipk">2.90</string>
    <string name="pilih_jenjang_pendidikan">Pilih Jenjang Pendidikan</string>
    <string name="pilih_benua">Pilih Benua</string>
    <string name="pilih_tipe_pendanaan">Pilih Tipe Pendanaan</string>
    <string name="recommend_me">Dapatkan Rekomendasi</string>
    <string name="tentang_program">Tentang Program</string>
    <string name="tipe_pendanaan">Tipe Pendanaan</string>
    <string name="fully_funded">Fully Funded</string>
    <string name="jurusan">Jurusan</string>
    <string name="simpan_beasiswa">Simpan Beasiswa</string>
    <string name="empty_search">Tidak ada data beasiswa yang dicari</string>
    <string name="teknik_informatika">Teknik Informatika</string>
    <string name="min_ipk">Tidak ada minimum IPK</string>
    <string name="biaya_hidup">Biaya Hidup</string>
    <string name="biaya">$1.103,84</string>
    <string name="jenis_tes_bahasa">Jenis Tes Bahasa</string>
    <string name="no_test">Tidak ada tes bahasa</string>
    <string name="min_skor">Minimum Skor Tes Bahasa</string>
    <string name="fakultas">Fakultas</string>
    <string name="nama_fakultas">Fakultas Ilmu dan Komunikasi</string>
    <string name="program_studi">Program Studi</string>
    <string name="persyaratan">Persyaratan</string>
    <string name="no_min_skor">Tidak ada minimal skor tes bahasa</string>
    <string name="fakultas_dan_program_studi">Fakultas dan Program Studi</string>
    <string name="input_nama">Masukkan nama beasiswa</string>
    <string name="no_data">Tidak ada data beasiswa</string>
    <string name="tv_hasil">Hasil Rekomendasi Beasiswa</string>
    <string name="tv_get">Dapatkan Info Beasiswa</string>
    <string name="benua">Benua</string>
    <string name="asia">Asia</string>
    <string name="nama_program">Nama Program Beasiswa</string>
    <string name="add">Beasiswa berhasil disimpan</string>
    <string name="delete">Beasiswa berhasil dihapus dari bookmark</string>
</resources>