<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.capstone.schero.ui.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            style="@style/CardViewPhoto"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <ImageView
                android:id="@+id/scholarshipPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_detail"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:text="@string/tentang_program"
            style="@style/TitleStyle"/>

        <androidx.cardview.widget.CardView
            style="@style/CardViewDetail"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <LinearLayout
                style="@style/LinearLayoutDescription">

                <TextView
                    android:text="@string/nama_program"
                    style="@style/DetailTitleStyle"/>
                <LinearLayout
                    style="@style/HorizontalLinearLayout">
                    <ImageView
                        style="@style/IconStyle"
                        android:src="@drawable/ic_nama" />
                    <TextView
                        android:id="@+id/namaScholarship"
                        android:text="@string/inpex"
                        android:layout_marginEnd="10dp"
                        style="@style/DetailDescriptionStyle"/>
                </LinearLayout>

                <TextView
                    android:text="@string/negara"
                    style="@style/DetailTitleStyle"/>
                <LinearLayout
                    style="@style/HorizontalLinearLayout">
                    <ImageView
                        style="@style/IconStyle"
                        android:src="@drawable/ic_loc" />
                    <TextView
                        android:id="@+id/negaraTextView"
                        android:text="@string/jepang"
                        style="@style/DetailDescriptionStyle"/>
                </LinearLayout>

                <TextView
                    android:text="@string/benua"
                    style="@style/DetailTitleStyle"/>
                <LinearLayout
                    style="@style/HorizontalLinearLayout">
                    <ImageView
                        style="@style/IconStyle"
                        android:src="@drawable/ic_benua" />
                    <TextView
                        android:id="@+id/benuaTextView"
                        android:text="@string/asia"
                        style="@style/DetailDescriptionStyle"/>
                </LinearLayout>

                <TextView
                    android:text="@string/jenjang"
                    style="@style/DetailTitleStyle"/>
                <LinearLayout
                    style="@style/HorizontalLinearLayout">
                    <ImageView
                        style="@style/IconStyle"
                        android:src="@drawable/ic_recommender"/>
                    <TextView
                        android:id="@+id/jenjangTextView"
                        android:text="@string/s1"
                        style="@style/DetailDescriptionStyle"/>
                </LinearLayout>

                <TextView
                    android:text="@string/tipe_pendanaan"
                    style="@style/DetailTitleStyle"/>
                <LinearLayout
                    style="@style/HorizontalLinearLayout">
                    <ImageView
                        style="@style/IconStyle"
                        android:src="@drawable/ic_pendanaan"/>
                    <TextView
                        android:id="@+id/pendanaanTextView"
                        android:text="@string/fully_funded"
                        style="@style/DetailDescriptionStyle"/>
                </LinearLayout>

                <TextView
                    android:text="@string/biaya_hidup"
                    style="@style/DetailTitleStyle"/>
                <LinearLayout
                    style="@style/HorizontalLinearLayout">
                    <ImageView
                        style="@style/IconStyle"
                        android:src="@drawable/ic_biaya"/>
                    <TextView
                        android:id="@+id/biayaTextView"
                        android:text="@string/biaya"
                        style="@style/DetailDescriptionStyle"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:text="@string/persyaratan"
            style="@style/TitleStyle"/>

        <androidx.cardview.widget.CardView
            style="@style/CardViewDetail"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <LinearLayout
                style="@style/LinearLayoutDescription">

                <TextView
                    android:text="@string/minimal_ipk"
                    style="@style/DetailTitleStyle"/>
                <LinearLayout
                    style="@style/HorizontalLinearLayout">
                    <ImageView
                        style="@style/IconStyle"
                        android:src="@drawable/ic_ipk"/>
                    <TextView
                        android:id="@+id/ipkTextView"
                        android:text="@string/min_ipk"
                        style="@style/DetailDescriptionStyle"/>
                </LinearLayout>

                <TextView
                    android:text="@string/jenis_tes_bahasa"
                    style="@style/DetailTitleStyle"/>
                <LinearLayout
                    style="@style/HorizontalLinearLayout">
                    <ImageView
                        style="@style/IconStyle"
                        android:src="@drawable/ic_toefl"/>
                    <TextView
                        android:id="@+id/jenisTesTextView"
                        android:text="@string/no_test"
                        style="@style/DetailDescriptionStyle"/>
                </LinearLayout>

                <TextView
                    android:text="@string/min_skor"
                    style="@style/DetailTitleStyle"/>
                <LinearLayout
                    style="@style/HorizontalLinearLayout">
                    <ImageView
                        style="@style/IconStyle"
                        android:src="@drawable/ic_skor"/>
                    <TextView
                        android:id="@+id/skorTextView"
                        android:text="@string/no_min_skor"
                        style="@style/DetailDescriptionStyle"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:text="@string/fakultas_dan_program_studi"
            style="@style/TitleStyle"/>

        <androidx.cardview.widget.CardView
            style="@style/CardViewDetail"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <LinearLayout
                style="@style/LinearLayoutDescription">
                <TextView
                    android:text="@string/fakultas"
                    style="@style/DetailTitleStyle"/>
                <LinearLayout
                    style="@style/HorizontalLinearLayout">
                    <ImageView
                        style="@style/IconStyle"
                        android:src="@drawable/ic_fakultas"/>
                    <TextView
                        android:id="@+id/fakultasTextView"
                        android:text="@string/nama_fakultas"
                        style="@style/DetailDescriptionStyle"/>
                </LinearLayout>

                <TextView
                    android:text="@string/program_studi"
                    style="@style/DetailTitleStyle"/>
                <LinearLayout
                    style="@style/HorizontalLinearLayout">
                    <ImageView
                        style="@style/IconStyle"
                        android:src="@drawable/ic_prodi"/>
                    <TextView
                        android:id="@+id/prodiTextView"
                        android:text="@string/teknik_informatika"
                        style="@style/DetailDescriptionStyle"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/linkCardView"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/light_green"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/ImageViewLink"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/linkTextView"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <TextView
                        style="@style/TextLink"
                        android:id="@+id/linkTextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/light_blue"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <ToggleButton
                    android:id="@+id/toggle_bookmark"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:textOff=""
                    android:textOn=""
                    android:background="@drawable/bookmarks_toggle"
                    app:tint="@color/white" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>