<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.home.HomeFragment">

        <androidx.cardview.widget.CardView
            style="@style/CardViewPhoto"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <ImageView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/banner"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:text="@string/pilih_benua"
            style="@style/TitleStyle"/>

        <androidx.cardview.widget.CardView
            style="@style/CardViewSpinner"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">
            <Spinner
                android:id="@+id/spinner_benua"
                style="@style/SpinnerLayout" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:text="@string/pilih_jenjang_pendidikan"
            style="@style/TitleStyle"/>

        <androidx.cardview.widget.CardView
            style="@style/CardViewSpinner"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">
            <Spinner
                style="@style/SpinnerLayout"
                android:id="@+id/spinner_jenjang"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:text="@string/pilih_tipe_pendanaan"
            style="@style/TitleStyle" />

        <androidx.cardview.widget.CardView
            style="@style/CardViewSpinner"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">
            <Spinner
                android:id="@+id/spinner_biaya"
                style="@style/SpinnerLayout"/>
        </androidx.cardview.widget.CardView>

        <Button
            style="@style/ButtonHome"
            android:id="@+id/recommenderButton"
            android:text="@string/recommend_me"/>

        <TextView
            android:text="@string/tv_hasil"
            style="@style/TitleStyle" />

        <androidx.cardview.widget.CardView
            style="@style/CardViewSpinner"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">
            <Spinner
                android:id="@+id/spinner_rekomendasi"
                style="@style/SpinnerLayout"/>
        </androidx.cardview.widget.CardView>

        <Button
            style="@style/ButtonHome"
            android:id="@+id/getInfoButton"
            android:text="@string/tv_get"
            android:layout_marginBottom="100dp"/>

    </LinearLayout>

</ScrollView>